--- a/lead/Cargo.toml
+++ b/lead/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "lead"
 path = "./src/main.rs"
 
+[lib]
+name = "lead_lib"
+path = "./src/lib.rs"
+
 [dependencies]
 chalk_rs = "1"
 dlopen2 = "0.7"
