--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -249,7 +249,7 @@ jobs:
         uses: shogo82148/actions-upload-release-asset@v1
         if: matrix.runner == 'windows-latest'
         with:
-          asset_path: ./leadman/target/${{ matrix.target }}/release/libleadman_lib.dll
+          asset_path: ./leadman/target/${{ matrix.target }}/release/leadman_lib.dll
           asset_name: leadman_${{ matrix.target }}_lib.dll
           upload_url: ${{ needs.tag.outputs.upload }}
 
