--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,6 +64,7 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: nightly
+          components: rust-src
 
       - name: Publish
         run: |
@@ -105,7 +106,7 @@ jobs:
             runner: ubuntu-22.04
 
           - target: aarch64-unknown-linux-gnu
-            runner: ubuntu-22.04
+            runner: ubuntu-22.04-arm
 
           - target: x86_64-apple-darwin
             runner: macos-latest
@@ -153,36 +154,17 @@ jobs:
             pkg-config 
 
           target="${{ matrix.target }}"
-
-          if [[ $target == "aarch64-unknown-linux-gnu" ]]; then
-            echo "Installing aarch64 dependencies"
-
-            sudo dpkg --add-architecture arm64
-            sudo cat ubuntu | sudo tee /etc/apt/sources.list
-
-            sudo apt-get update
-
-            sudo apt install libxdo-dev:arm64 \
-              libayatana-appindicator3-dev:arm64 \
-              librsvg2-dev:arm64 \
-              libgtk-3-dev:arm64 \
-              libwebkit2gtk-4.1-dev:arm64 \
-              libssl-dev:arm64
-          else
-            echo "Installing x86_64 dependencies"
-
-            sudo apt update
-            sudo apt install libwebkit2gtk-4.1-dev \
-              build-essential \
-              curl \
-              wget \
-              file \
-              libxdo-dev \
-              libssl-dev \
-              libayatana-appindicator3-dev \
-              librsvg2-dev \
-              libgtk-3-dev
-          fi
+          sudo apt update
+          sudo apt install libwebkit2gtk-4.1-dev \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libxdo-dev \
+            libssl-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev \
+            libgtk-3-dev
 
       - name: Build Lead Docs UI
         run: pnpm install; pnpm build
@@ -192,11 +174,6 @@ jobs:
         if: runner.os != 'Windows'
         run: |
           arch="${{ matrix.target }}"
-          if [[ $arch == "aarch64-unknown-linux-gnu" ]]; then
-            echo "Setting PKG CONFIG for aarch64 linux"
-
-            export PKG_CONFIG_SYSROOT_DIR=/usr/aarch64-linux-gnu/
-          fi
 
           cargo +nightly run --release
         env:
