--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -108,6 +108,12 @@ jobs:
           - target: aarch64-unknown-linux-gnu
             runner: ubuntu-22.04-arm
 
+          - target: x86_64-unknown-linux-musl
+            runner: ubuntu-latest
+
+          - target: aarch64-unknown-linux-musl
+            runner: ubuntu-latest
+
           - target: x86_64-apple-darwin
             runner: macos-latest
 
@@ -248,15 +254,46 @@ jobs:
         target:
           - i686-unknown-linux-gnu
           - armv7-unknown-linux-gnueabi
+          - arm-unknown-linux-gnueabihf
+
+          # MUSL
+          - arm-unknown-linux-musleabi
+          - arm-unknown-linux-musleabihf
+
+          # MIPS GNU
+          - mips-unknown-linux-gnu
+          - mips64-unknown-linux-gnuabi64
+          - mips64el-unknown-linux-gnuabi64
+          - mipsel-unknown-linux-gnu
+
+          # LongArch
+          - loongarch64-unknown-linux-gnu
+          - loongarch64-unknown-linux-musl
+
+          # PowerPC
+          - powerpc-unknown-linux-gnu
+          - powerpc64-unknown-linux-gnu
+          - powerpc64le-unknown-linux-gnu
+
+          # MIPS MUSL
+          - mips-unknown-linux-musl
+          - mips64-unknown-linux-muslabi64
+          - mips64el-unknown-linux-muslabi64
+          - mipsel-unknown-linux-musl
+
+          # FreeBSD
           - x86_64-unknown-freebsd
           - aarch64-unknown-freebsd
           - i686-unknown-freebsd
 
+          # NetBSD
           - x86_64-unknown-netbsd
 
+          # Illumos & DFLY BSD
           - x86_64-unknown-illumos
           - x86_64-unknown-dragonfly
 
+          # Android
           - aarch64-linux-android
           - armv7-linux-androideabi
           - i686-linux-android
