--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -108,6 +108,24 @@ jobs:
           - target: aarch64-unknown-linux-gnu
             runner: ubuntu-22.04-arm
 
+          - target: x86_64-unknown-linux-musl
+            runner: ubuntu-22.04
+
+          - target: aarch64-unknown-linux-musl
+            runner: ubuntu-22.04-arm
+
+          - target: mips-unknown-linux-musl
+            runner: ubuntu-latest
+
+          - target: mips64-unknown-linux-muslabi64
+            runner: ubuntu-latest
+
+          - target: mips64el-unknown-linux-muslabi64
+            runner: ubuntu-latest
+
+          - target: mipsel-unknown-linux-musl
+            runner: ubuntu-latest
+
           - target: x86_64-apple-darwin
             runner: macos-latest
 
@@ -243,12 +261,9 @@ jobs:
     needs: [tag]
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         target:
-          - aarch64-unknown-linux-musl
-          - x86_64-unknown-linux-musl
-
           - i686-unknown-linux-gnu
 
           - i586-unknown-linux-gnu
@@ -284,10 +299,7 @@ jobs:
           - powerpc64le-unknown-linux-gnu
 
           # MIPS MUSL
-          - mips-unknown-linux-musl
-          - mips64-unknown-linux-muslabi64
-          - mips64el-unknown-linux-muslabi64
-          - mipsel-unknown-linux-musl
+          # Moved to the other category
 
           # FreeBSD
           - x86_64-unknown-freebsd
