--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -167,7 +167,7 @@ jobs:
 
           sudo apt install gcc-aarch64-linux-gnu musl-tools clang lld
 
-          sudo apt install flex zip texinfo
+          sudo apt install flex zip help2man gawk libtool libtool-bin libtool-doc bison texinfo
           sudo apt install build-essential \
             curl \
             wget \
