--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -85,7 +85,7 @@ jobs:
           message: Consume suffix file
 
   build:
-    name: Release & Publish
+    name: Release & Publish T1
     continue-on-error: true
     needs: [tag]
 
@@ -113,18 +113,6 @@ jobs:
 
           - target: aarch64-unknown-linux-musl
             runner: ubuntu-22.04-arm
-
-          - target: mips-unknown-linux-musl
-            runner: ubuntu-latest
-
-          - target: mips64-unknown-linux-muslabi64
-            runner: ubuntu-latest
-
-          - target: mips64el-unknown-linux-muslabi64
-            runner: ubuntu-latest
-
-          - target: mipsel-unknown-linux-musl
-            runner: ubuntu-latest
 
           - target: x86_64-apple-darwin
             runner: macos-latest
@@ -186,14 +174,6 @@ jobs:
             libayatana-appindicator3-dev \
             librsvg2-dev \
             libgtk-3-dev
-
-          curl http://crosstool-ng.org/download/crosstool-ng/crosstool-ng-1.26.0.tar.xz -o tool.tar.xz
-
-          cd crosstool-ng-1.26.0
-          ./bootstrap
-          ./configure --prefix=$HOME/bin
-          make
-          make install
 
       - name: Build Lead Docs UI
         run: pnpm install; pnpm build
@@ -267,7 +247,8 @@ jobs:
           upload_url: ${{ needs.tag.outputs.upload }}
 
   build-cross:
-    name: Release & Publish
+    name: Release & Publish T2
+    continue-on-error: true
 
     needs: [tag]
 
@@ -276,9 +257,6 @@ jobs:
       matrix:
         target:
           - i686-unknown-linux-gnu
-
-          - i586-unknown-linux-gnu
-          - i586-unknown-linux-musl
 
           - armv7-unknown-linux-gnueabi
           - armv7-unknown-linux-gnueabihf
@@ -300,6 +278,12 @@ jobs:
           - mips64el-unknown-linux-gnuabi64
           - mipsel-unknown-linux-gnu
 
+          # MIPS MUSL
+          - mips-unknown-linux-musl
+          - mips64-unknown-linux-muslabi64
+          - mips64el-unknown-linux-muslabi64
+          - mipsel-unknown-linux-musl
+
           # LongArch
           - loongarch64-unknown-linux-gnu
           - loongarch64-unknown-linux-musl
@@ -308,9 +292,6 @@ jobs:
           - powerpc-unknown-linux-gnu
           - powerpc64-unknown-linux-gnu
           - powerpc64le-unknown-linux-gnu
-
-          # MIPS MUSL
-          # Moved to the other category
 
           # FreeBSD
           - x86_64-unknown-freebsd
@@ -369,6 +350,7 @@ jobs:
           cargo run --release
         env:
           TARGET: ${{ matrix.target }}
+          CROSS_CONFIG: ${{ github.workspace }}/Cross.toml
           USE_CROSS: true
 
       - name: Build leadman
