--- a/leadman/Cargo.toml
+++ b/leadman/Cargo.toml
@@ -23,10 +23,7 @@ inquire = { version = "0.7", default-features = false, features = [
   "one-liners",
   "macros",
 ] }
-reqwest = { version = "0.12", default-features = false, features = [
-  "json",
-  "rustls-tls",
-] }
+
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha256 = { version = "1.5.0", default-features = false }
@@ -38,6 +35,16 @@ tokio = { version = "1", features = [
   "process",
 ] }
 zip = "2.2.2"
+
+[target.'cfg(any(target_arch = "mips", target_arch = "mips64"))'.dependencies]
+reqwest = { version = "0.12", features = ["json"] }
+openssl-sys = { version = "*", features = ["vendored"] }
+
+[target.'cfg(not(any(target_arch = "mips", target_arch = "mips64")))'.dependencies]
+reqwest = { version = "0.12", default-features = false, features = [
+  "json",
+  "rustls-tls",
+] }
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.55"
