--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -161,8 +161,8 @@ jobs:
 
           target="${{ matrix.target }}"
           sudo apt update
-          sudo apt install libwebkit2gtk-4.1-dev \
-            build-essential \
+          sudo apt install libwebkit2gtk-4.1-dev || true
+          sudo apt install build-essential \
             curl \
             wget \
             file \
