--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -102,16 +102,13 @@ jobs:
           - target: aarch64-pc-windows-msvc
             runner: windows-latest
 
-          - target: arm64ec-pc-windows-msvc
-            runner: windows-latest
+          # - target: arm64ec-pc-windows-msvc
+          #   runner: windows-latest
 
           - target: i686-win7-windows-msvc
             runner: windows-latest
 
           - target: x86_64-win7-windows-msvc
-            runner: windows-latest
-
-          - target: thumbv7a-pc-windows-msvc
             runner: windows-latest
 
           - target: x86_64-unknown-linux-gnu
