--- a/lead/Cargo.toml
+++ b/lead/Cargo.toml
@@ -12,14 +12,27 @@ name = "lead_lib"
 path = "./src/lib.rs"
 
 [dependencies]
-chalk_rs = "1"
-dlopen2 = "0.7.0"
+chalk_rs = { git = "https://github.com/leadlang/chalk.git" }
 lead_lang_interpreter = { path = "../interpreter" }
+libloading = "0.8.6"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-sysinfo = { version = "0.33", default-features = false, features = ["system"] }
 termcolor = "1"
 tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs"] }
+
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.59.0", features = [
+  "Win32_System_Com",
+  "Win32_System_Ole",
+  "Win32_System_Variant",
+  "Win32_System_SystemInformation",
+  "Win32_Foundation",
+  "Win32_Security",
+  "Win32_System_Wmi",
+] }
+
+[target.'cfg(not(windows))'.dependencies]
+sysinfo = { version = "0.33", default-features = false, features = ["system"] }
 
 [build-dependencies]
 tauri-winres = "0.2"
