--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -13,7 +13,7 @@ proc-macro = true
 proc-macro2 = "1"
 quote = "1"
 syn = { version = "2", features = ["full"] }
-lead_lang_interpreter = { path = "../interpreter", version = "0.0.0-dev-lead-lang" }
+lead_lang_interpreter = { version = "0.0.0-dev-lead-lang" }
 
 [patch.crates-io]
 lead_lang_interpreter = { path = "../interpreter" }
