--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -78,6 +78,7 @@ jobs:
 
       - name: Commit Suffix
         uses: EndBug/add-and-commit@v9
+        if: contains('-nightly', needs.tag.outputs.tag) == false
         with:
           add: suffix
           author_name: GitHub Actions
