--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -149,9 +149,11 @@ jobs:
       - name: Install Rust
         run: |
           rustup toolchain add nightly-2025-01-25 --profile minimal
+          rustup toolchain add nightly --profile minimal
 
           rustup target add ${{ matrix.target }} --toolchain nightly-2025-01-25 || true
           rustup component add rust-src --toolchain nightly-2025-01-25
+          rustup component add rust-src --toolchain nightly
 
           rustup default nightly-2025-01-25
 
