--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -148,14 +148,12 @@ jobs:
 
       - name: Install Rust
         run: |
-          rustup toolchain add nightly-2025-01-25 --profile minimal
           rustup toolchain add nightly --profile minimal
 
-          rustup target add ${{ matrix.target }} --toolchain nightly-2025-01-25 || true
-          rustup component add rust-src --toolchain nightly-2025-01-25
+          rustup target add ${{ matrix.target }} --toolchain nightly || true
           rustup component add rust-src --toolchain nightly
 
-          rustup default nightly-2025-01-25
+          rustup default nightly
 
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
@@ -380,7 +378,7 @@ jobs:
 
       - name: Build leadman
         run: |
-          cross +nightly build --target ${{ matrix.target }} --release
+          cross +nightly-2025-01-25 build --target ${{ matrix.target }} --release
         working-directory: leadman
 
       - name: Publish Unix Bin
