--- a/lead/Cargo.toml
+++ b/lead/Cargo.toml
@@ -36,3 +36,10 @@ sysinfo = { version = "0.33", default-features = false, features = ["system"] }
 
 [build-dependencies]
 tauri-winres = "0.2"
+
+[profile.release]
+panic = "abort"
+codegen-units = 1
+lto = true
+opt-level = "s"
+strip = true
