--- a/lead/Cargo.toml
+++ b/lead/Cargo.toml
@@ -12,7 +12,7 @@ name = "lead_lib"
 path = "./src/lib.rs"
 
 [dependencies]
-chalk_rs = { git = "https://github.com/leadlang/chalk.git" }
+lealang_chalk_rs = "1"
 lead_lang_interpreter = { path = "../interpreter" }
 libloading = "0.8.6"
 serde = { version = "1", features = ["derive"] }
