--- a/macros/tests/Cargo.toml
+++ b/macros/tests/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2021"
 
 [dependencies]
 lead_lang_macros = { path = ".." }
+lead_lang_interpreter = { version = "0.0.0-dev-lead-lang" }
+
+[patch.crates-io]
 lead_lang_interpreter = { path = "../../interpreter" }
