--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -13,8 +13,12 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 indoc = "2.0.5"
-lead_lang_interpreter = { path = "../../interpreter" }
+lead_lang_interpreter = "0.0.0-dev-lead-lang"
+lead_lang_macros = { path = "../../macros" }
 serde_json = "1.0.137"
+
+[patch.crates-io]
+lead_lang_interpreter = { path = "../../interpreter" }
 
 [features]
 doc = []
