--- a/lead_docs_cli/Cargo.toml
+++ b/lead_docs_cli/Cargo.toml
@@ -12,13 +12,9 @@ cursive = { git = "https://github.com/gyscos/cursive.git", default-features = fa
   "crossterm-backend",
   "markdown",
 ] }
-inquire = { version = "0.7.5", default-features = false, features = [
-  "fuzzy",
-  "macros",
-  "console",
-] }
 lead_lang_interpreter = { version = "0.0.0-dev-lead-lang", path = "../interpreter" }
 libloading = "0.8.6"
+serde = { version = "1.0.217", features = ["derive"] }
 
 [target.'cfg(windows)'.build-dependencies]
 tauri-winres = "0.3"
@@ -26,3 +22,4 @@ tauri-winres = "0.3"
 [package.metadata.tauri-winres]
 OriginalFilename = "lead_docs.exe"
 LegalCopyright = "Copyright © 2024 - The AHQ Softwares' Lead lang Team"
+
