--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -12,4 +12,6 @@ name = "interpreter"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-recursion = "1.1.1"
 lealang_chalk_rs = "1"
+tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "sync"] }
