--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/leadlang/lead"
 
 [lib]
 name = "interpreter"
+crate-type = ["rlib", "dylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
