--- a/leadman/Cargo.toml
+++ b/leadman/Cargo.toml
@@ -36,11 +36,11 @@ tokio = { version = "1", features = [
 ] }
 zip = "2"
 
-[target.'cfg(any(target_arch = "mips", target_arch = "mips64"))'.dependencies]
+[target.'cfg(any(target_arch = "mips", target_arch = "mips64", target_os = "illumos"))'.dependencies]
 reqwest = { version = "0.12", features = ["json"] }
 openssl-sys = { version = "*", features = ["vendored"] }
 
-[target.'cfg(not(any(target_arch = "mips", target_arch = "mips64")))'.dependencies]
+[target.'cfg(not(any(target_arch = "mips", target_arch = "mips64", target_os = "illumos")))'.dependencies]
 reqwest = { version = "0.12", default-features = false, features = [
   "json",
   "rustls-tls",
