--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -279,11 +279,6 @@ jobs:
       fail-fast: false
       matrix:
         target:
-          # Illumos & DFLY BSD
-          - x86_64-unknown-illumos
-          - x86_64-unknown-dragonfly
-
-          # MUSL Linux
           - x86_64-unknown-linux-musl
           - aarch64-unknown-linux-musl
 
@@ -332,6 +327,10 @@ jobs:
           # NetBSD
           - x86_64-unknown-netbsd
 
+          # Illumos & DFLY BSD
+          - x86_64-unknown-illumos
+          - x86_64-unknown-dragonfly
+
           # Android
           - aarch64-linux-android
           - armv7-linux-androideabi
@@ -372,7 +371,7 @@ jobs:
           sudo apt-get update
           sudo apt-get -y install podman
 
-          RUSTFLAGS="" cargo install cross --force --git https://github.com/ahqsoftwares/cross --branch patch-1
+          RUSTFLAGS="" cargo install cross --force --git https://github.com/cross-rs/cross
 
           cargo run --release
         env:
