--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -14,4 +14,9 @@ crate-type = ["rlib"]
 
 [dependencies]
 lealang_chalk_rs = "1"
+phf = { version = "0.11.3", features = ["macros"], optional = true }
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
+
+[features]
+default = ["phf"]
+phf = ["dep:phf"]
