--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["rlib"]
 
 [dependencies]
 lealang_chalk_rs = "1"
+paste = "1.0.15"
 phf = { version = "0.11.3", features = ["macros"], optional = true }
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
 
