--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -14,10 +14,10 @@ crate-type = ["rlib"]
 
 [dependencies]
 lealang_chalk_rs = "1"
-paste = "1.0.15"
+paste = "1"
 phf = { version = "0.11.3", features = ["macros"], optional = true }
-tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
 
 [features]
 default = ["phf"]
 phf = ["dep:phf"]
+parallel = []
