--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -16,7 +16,7 @@ crate-type = ["rlib"]
 lealang_chalk_rs = "1"
 paste = "1"
 phf = { version = "0.11.3", features = ["macros"], optional = true }
-tokio = { version = "1.44.2", features = ["rt", "sync", "time"] }
+tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "sync", "time"] }
 
 [features]
 default = ["phf", "parser"]
